--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "pinata-sdk-nestjs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/auralshin/pinata-sdk-nestjs.git"
+  },
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && tsc && npm run build:index",
+    "build:index": "rimraf ./index.js ./index.d.ts && tsc -d --skipLibCheck ./index.ts",
+    "format": "prettier **/*.ts --ignore-path ./.prettierignore --write && git status",
+    "prepublish": "yarn run format && yarn run build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "auralshin",
+  "license": "MIT",
   "dependencies": {
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.4.0",
+    "@nestjs/common": "^9.3.12",
     "@nestjs/core": "^9.4.0",
     "axios": "^1.3.5",
+    "prettier": "^2.8.7",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^4.4.1",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
