--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pinata-sdk-nestjs",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -21,13 +21,18 @@
     "@nestjs/common": "^9.3.12",
     "@nestjs/core": "^9.4.0",
     "axios": "^1.3.5",
-    "prettier": "^2.8.7",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.1",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "typescript": "^5.0.3"
+    "@types/node": "*",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "eslint": "*",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "rimraf": "*",
+    "typescript": "^4.6.4"
   }
 }
